--- a/Source/products.plist
+++ b/Source/products.plist
@@ -3,88 +3,82 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +1000Exp</string>
-		<key>localizedTitle</key>
-		<string>微型经验记录器</string>
 		<key>price</key>
-		<string>6</string>
+		<string>￥6</string>
+		<key>items</key>
+		<dict>
+			<key>gold</key>
+			<integer>2000</integer>
+		</dict>
 		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer6</string>
+		<string>net.profzone.bacterial2.gold_pack6</string>
 		<key>sort</key>
 		<integer>1</integer>
 	</dict>
 	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +2100Exp</string>
-		<key>localizedTitle</key>
-		<string>小型经验记录器</string>
 		<key>price</key>
-		<string>12</string>
+		<string>￥12</string>
+		<key>items</key>
+		<dict>
+			<key>gold</key>
+			<integer>5000</integer>
+		</dict>
 		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer12</string>
+		<string>net.profzone.bacterial2.gold_pack12</string>
 		<key>sort</key>
 		<integer>2</integer>
 	</dict>
 	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +3500Exp</string>
-		<key>localizedTitle</key>
-		<string>中型经验记录器</string>
 		<key>price</key>
-		<string>18</string>
+		<string>￥25</string>
+		<key>items</key>
+		<dict>
+			<key>gold</key>
+			<integer>12000</integer>
+		</dict>
 		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer18</string>
+		<string>net.profzone.bacterial2.gold_pack25</string>
 		<key>sort</key>
 		<integer>3</integer>
 	</dict>
 	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +5000Exp</string>
-		<key>localizedTitle</key>
-		<string>大型经验记录器</string>
 		<key>price</key>
-		<string>25</string>
+		<string>￥45</string>
+		<key>items</key>
+		<dict>
+			<key>gold</key>
+			<integer>25000</integer>
+		</dict>
 		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer25</string>
+		<string>net.profzone.bacterial2.gold_pack45</string>
 		<key>sort</key>
 		<integer>4</integer>
 	</dict>
 	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +9000Exp</string>
-		<key>localizedTitle</key>
-		<string>超级经验记录器</string>
 		<key>price</key>
-		<string>40</string>
+		<string>￥68</string>
+		<key>items</key>
+		<dict>
+			<key>gold</key>
+			<integer>40000</integer>
+		</dict>
 		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer40</string>
+		<string>net.profzone.bacterial2.gold_pack68</string>
 		<key>sort</key>
 		<integer>5</integer>
 	</dict>
 	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +15000Exp</string>
-		<key>localizedTitle</key>
-		<string>超级经验记录器V2</string>
 		<key>price</key>
-		<string>60</string>
+		<string>￥128</string>
+		<key>items</key>
+		<dict>
+			<key>gold</key>
+			<integer>100000</integer>
+		</dict>
 		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer60</string>
+		<string>net.profzone.bacterial2.gold_pack128</string>
 		<key>sort</key>
 		<integer>6</integer>
-	</dict>
-	<dict>
-		<key>localizedDescription</key>
-		<string>培育经验 +30000Exp</string>
-		<key>localizedTitle</key>
-		<string>先驱者的经验记录器</string>
-		<key>price</key>
-		<string>98</string>
-		<key>productIdentifier</key>
-		<string>net.profzone.bacterial.killer98</string>
-		<key>sort</key>
-		<integer>7</integer>
 	</dict>
 </array>
 </plist>
