--- a/bacterial2.xcodeproj/xcshareddata/xcschemes/bacterial2.xcscheme
+++ b/bacterial2.xcodeproj/xcshareddata/xcschemes/bacterial2.xcscheme
@@ -60,7 +60,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "NSZombieEnabled"
-            value = "NO"
+            value = "YES"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
