--- a/Source/achievement_const.plist
+++ b/Source/achievement_const.plist
@@ -2,85 +2,107 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>exp</key>
-	<dict>
-		<key>net.profzone.bacterial.achievement.exp100</key>
-		<dict>
-			<key>goal</key>
-			<integer>100</integer>
-		</dict>
-		<key>net.profzone.bacterial.achievement.exp300</key>
-		<dict>
-			<key>goal</key>
-			<integer>300</integer>
-		</dict>
-		<key>net.profzone.bacterial.achievement.exp1000</key>
-		<dict>
-			<key>goal</key>
-			<integer>1000</integer>
-		</dict>
-		<key>net.profzone.bacterial.achievement.exp2000</key>
-		<dict>
-			<key>goal</key>
-			<integer>2000</integer>
-		</dict>
-		<key>net.profzone.bacterial.achievement.exp5000</key>
-		<dict>
-			<key>goal</key>
-			<integer>5000</integer>
-		</dict>
-		<key>net.profzone.bacterial.achievement.exp10000</key>
-		<dict>
-			<key>goal</key>
-			<integer>10000</integer>
-		</dict>
-	</dict>
 	<key>level</key>
 	<dict>
-		<key>net.profzone.bacterial.achievement.level2</key>
+		<key>net.profzone.bacterial2.achievement.level2</key>
 		<dict>
 			<key>goal</key>
 			<integer>2</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level3</key>
+		<key>net.profzone.bacterial2.achievement.level3</key>
 		<dict>
 			<key>goal</key>
 			<integer>3</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level4</key>
+		<key>net.profzone.bacterial2.achievement.level4</key>
 		<dict>
 			<key>goal</key>
 			<integer>4</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level5</key>
+		<key>net.profzone.bacterial2.achievement.level5</key>
 		<dict>
 			<key>goal</key>
 			<integer>5</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level6</key>
+		<key>net.profzone.bacterial2.achievement.level6</key>
 		<dict>
 			<key>goal</key>
 			<integer>6</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level7</key>
+		<key>net.profzone.bacterial2.achievement.level7</key>
 		<dict>
 			<key>goal</key>
 			<integer>7</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level8</key>
+		<key>net.profzone.bacterial2.achievement.level8</key>
 		<dict>
 			<key>goal</key>
 			<integer>8</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level9</key>
+		<key>net.profzone.bacterial2.achievement.level9</key>
 		<dict>
 			<key>goal</key>
 			<integer>9</integer>
 		</dict>
-		<key>net.profzone.bacterial.achievement.level10</key>
+		<key>net.profzone.bacterial2.achievement.level10</key>
 		<dict>
 			<key>goal</key>
 			<integer>10</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level11</key>
+		<dict>
+			<key>goal</key>
+			<integer>11</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level12</key>
+		<dict>
+			<key>goal</key>
+			<integer>12</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level13</key>
+		<dict>
+			<key>goal</key>
+			<integer>13</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level14</key>
+		<dict>
+			<key>goal</key>
+			<integer>14</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level15</key>
+		<dict>
+			<key>goal</key>
+			<integer>15</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level16</key>
+		<dict>
+			<key>goal</key>
+			<integer>16</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level17</key>
+		<dict>
+			<key>goal</key>
+			<integer>17</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level18</key>
+		<dict>
+			<key>goal</key>
+			<integer>18</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level19</key>
+		<dict>
+			<key>goal</key>
+			<integer>19</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level20</key>
+		<dict>
+			<key>goal</key>
+			<integer>20</integer>
+		</dict>
+		<key>net.profzone.bacterial2.achievement.level21</key>
+		<dict>
+			<key>goal</key>
+			<integer>21</integer>
 		</dict>
 	</dict>
 </dict>
