--- a/Source/Resources/Info.plist
+++ b/Source/Resources/Info.plist
@@ -29,7 +29,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxfa1868e8028fdf80</string>
+				<string>wxcb415985730902db</string>
 			</array>
 		</dict>
 		<dict>
