--- a/Source/Resources/Info.plist
+++ b/Source/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
 	<string>细菌博士</string>
 	<key>CFBundleExecutable</key>
